Fix: Align credit left.

--- a/static/css/style.default.css
+++ b/static/css/style.default.css
@@ -663,12 +663,12 @@ COPYRIGHT
 }
 @media (max-width: 991px) {
   .copyright p.credit {
-    text-align: center !important;
+    text-align: left !important;
   }
 }
 @media (max-width: 991px) {
   .copyright {
-    text-align: center !important;
+    text-align: left !important;
   }
 }
 /*
